# fun1

./: .gitignore  CMakeLists.txt  Login.glade  Main.glade  config.ini  main.cpp
header/: connection.hpp  connection_settings.hpp  controller.hpp  delay.hpp  delay_base.hpp  info.hpp  invoke.hpp  login.hpp  manager.hpp  update_view_timer_model.hpp  view.hpp  window.hpp  worker.hpp
interface/: ievent_subscriber.hpp  ihandler.hpp  isettings.hpp  itimer.hpp  itimer_subscriber.hpp  iupdate.hpp  iview.hpp  iwindow.hpp
src/: connection.cpp  controller.cpp  delay_base.cpp  info.cpp  login.cpp  manager.cpp  view.cpp
